--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Tei187\\UtilitiesPhp\\": "src/"
+            "Tei187\\Utilities\\": "src/"
         }
     },
     "authors": [
