--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
             "email": "bonk.piotr@gmail.com"
         }
     ],
-    "require": {}
+    "scripts": {
+        "gendoc": "php phpDocumentor.phar --directory=src --target=docs --template=vendor/onspli/phpdoc-markdown/templates/public-onefile"
+    },
+    "require-dev": {
+        "onspli/phpdoc-markdown": "^0.3.3"
+    }
 }
